; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/extr_perf_event.c_perf_get_x86_pmu_capability.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/extr_perf_event.c_perf_get_x86_pmu_capability.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i32, i32, i32, i32 }
%struct.x86_pmu_capability = type { i32, i32, i32, i32, i32, i32, i32 }

@x86_pmu = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @perf_get_x86_pmu_capability(%struct.x86_pmu_capability* %0) #0 {
  %2 = alloca %struct.x86_pmu_capability*, align 8
  store %struct.x86_pmu_capability* %0, %struct.x86_pmu_capability** %2, align 8
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 5), align 4
  %4 = load %struct.x86_pmu_capability*, %struct.x86_pmu_capability** %2, align 8
  %5 = getelementptr inbounds %struct.x86_pmu_capability, %struct.x86_pmu_capability* %4, i32 0, i32 6
  store i32 %3, i32* %5, align 4
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 4), align 8
  %7 = load %struct.x86_pmu_capability*, %struct.x86_pmu_capability** %2, align 8
  %8 = getelementptr inbounds %struct.x86_pmu_capability, %struct.x86_pmu_capability* %7, i32 0, i32 5
  store i32 %6, i32* %8, align 4
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 3), align 4
  %10 = load %struct.x86_pmu_capability*, %struct.x86_pmu_capability** %2, align 8
  %11 = getelementptr inbounds %struct.x86_pmu_capability, %struct.x86_pmu_capability* %10, i32 0, i32 4
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 2), align 8
  %13 = load %struct.x86_pmu_capability*, %struct.x86_pmu_capability** %2, align 8
  %14 = getelementptr inbounds %struct.x86_pmu_capability, %struct.x86_pmu_capability* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  %15 = load %struct.x86_pmu_capability*, %struct.x86_pmu_capability** %2, align 8
  %16 = getelementptr inbounds %struct.x86_pmu_capability, %struct.x86_pmu_capability* %15, i32 0, i32 3
  store i32 %12, i32* %16, align 4
  %17 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 1), align 8
  %18 = trunc i64 %17 to i32
  %19 = load %struct.x86_pmu_capability*, %struct.x86_pmu_capability** %2, align 8
  %20 = getelementptr inbounds %struct.x86_pmu_capability, %struct.x86_pmu_capability* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 0), align 8
  %22 = load %struct.x86_pmu_capability*, %struct.x86_pmu_capability** %2, align 8
  %23 = getelementptr inbounds %struct.x86_pmu_capability, %struct.x86_pmu_capability* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
